Second Commit FE

--- a/react/paybird/src/index.css
+++ b/react/paybird/src/index.css
@@ -1,1 +1,6 @@
 @import 'tailwindcss';
+@import url('https://fonts.googleapis.com/css2?family=Inder&display=swap');
+
+.font-inder {
+	font-family: 'Inder', sans-serif;
+}
